Change html and css

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <article class="max-length">
 		<div class="content center-content relative">
 			<div class="background text-center exa">
-				<div class="hear">Hear</div>
+				<div class="hear zetta">Hear</div>
 				<div>the</div>
-				<div class="music">Music</div>
+				<div class="music zetta">Music</div>
 			</div>
-      <blockquote class="push-0 island absolute">
-          <p class="push-1-4 milli"><span class="hang-punc">“</span>And those who were seen dancing were thought to be insane by those who could not hear the music.”</p>
-          <footer class="micro">– Friedrich Nietzsche</footer>
+      <blockquote class="push-0 island-2 absolute">
+          <p class="push-1-4 kilo"><span class="hang-punc">“</span>And those who were seen dancing were thought to be insane by those who could not hear the music.”</p>
+          <footer class="milli">– Friedrich Nietzsche</footer>
       </blockquote>
     </div>
   </article>
