Remove and add content for markbot

--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
   <meta charset="utf-8">
   <title>Hear The Music</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="css/type.css">
-  <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/modules.css">
+  <link rel="stylesheet" href="css/grid.css">
+  <link rel="stylesheet" href="css/type.css">
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Euphoria+Script|Josefin+Slab:400,400i,600,600i,700&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <article class="max-length">
-		<div class="content center-content relative">
-			<div class="background text-center exa">
-				<div class="hear zetta">Hear</div>
-				<div>the</div>
-				<div class="music zetta">Music</div>
-			</div>
-      <blockquote class="push-0 island-2 absolute">
-          <p class="push-1-4 kilo"><span class="hang-punc">“</span>And those who were seen dancing were thought to be insane by those who could not hear the music.”</p>
-          <footer class="milli">– Friedrich Nietzsche</footer>
+    <div class="content center-content relative grid">
+      <div class="background text-center exa unit">
+        <div>
+          <h1 class="push-0">
+            <span class="hear zetta">Hear</span> <br>the<br>
+            <span class="hear zetta">Music</span>
+          </h1>
+        </div>
+      </div>
+      <blockquote class="push-0 island-2 absolute unit">
+        <p class="push-1-4 kilo"><span class="hang-punc">“</span>And those who were seen dancing were thought to be insane by those who could not hear the music.”</p>
+        <footer class="milli">– Friedrich Nietzsche</footer>
       </blockquote>
     </div>
   </article>
