Edit positioning and font size

--- a/index.html
+++ b/index.html
@@ -12,17 +12,15 @@
 </head>
 <body>
 
-  <article class="max-length">
+  <article>
     <div class="content center-content relative grid">
-      <div class="background text-center exa unit">
-        <div>
-          <h1 class="push-0">
-            <span class="hear zetta">Hear</span> <br>the<br>
-            <span class="hear zetta">Music</span>
-          </h1>
-        </div>
+      <div class="background text-center unit">
+        <h1 class="exa push-0">
+          <span class="hear zetta">Hear</span> <br>the<br>
+          <span class="music zetta">Music</span>
+        </h1>
       </div>
-      <blockquote class="push-0 island-2 absolute unit">
+      <blockquote class="push-0 island-2 absolute pin-center unit">
         <p class="push-1-4 kilo"><span class="hang-punc">“</span>And those who were seen dancing were thought to be insane by those who could not hear the music.”</p>
         <footer class="milli">– Friedrich Nietzsche</footer>
       </blockquote>
