Adjust quote width

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <span class="music zetta">Music</span>
         </h1>
       </div>
-      <blockquote class="push-0 island-2 absolute pin-center unit">
-        <p class="push-1-4 kilo"><span class="hang-punc">“</span>And those who were seen dancing were thought to be insane by those who could not hear the music.”</p>
+      <blockquote class="push-0 island absolute pin-center unit">
+        <p class="push-1-4 kilo island-1-2"><span class="hang-punc">“</span>And those who were seen dancing were thought to be insane by those who could not hear the music.”</p>
         <footer class="milli">– Friedrich Nietzsche</footer>
       </blockquote>
     </div>
