Adjust zetta line height

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <article>
     <div class="content center-content relative grid">
-      <div class="background text-center unit">
+      <div class="background text-center pad-t unit">
         <h1 class="exa push-0">
           <span class="hear zetta">Hear</span> <br>the<br>
           <span class="music zetta">Music</span>
