Try hover states

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <article>
     <div class="content center-content relative grid">
-      <div class="background text-center pad-t unit">
+      <div class="background text-center pad-t-2 unit">
         <h1 class="exa push-0">
           <span class="hear zetta">Hear</span> <br>the<br>
           <span class="music zetta">Music</span>
@@ -22,7 +22,7 @@
       </div>
       <blockquote class="push-0 island absolute pin-center unit">
         <p class="push-1-4 kilo island-1-2"><span class="hang-punc">“</span>And those who were seen dancing were thought to be insane by those who could not hear the music.”</p>
-        <footer class="milli">– Friedrich Nietzsche</footer>
+        <footer class="milli gutter-1-2">– Friedrich Nietzsche</footer>
       </blockquote>
     </div>
   </article>
